# KSharp

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ksharp.sln  ksharp.vcxproj  ksharp.vcxproj.filters  main.cpp  utils.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01-bug_report.md  02-feature_request.md  03-custom.md  config.yml
.github/workflows/: dotnet.yml
cli/: main.cpp
cli/cmds/: comp.hpp  help.hpp
ide/: ide.csproj
ksharp/x64/Debug/: ksharp.exe.recipe  ksharp.ilk  vc143.idb
ksharp/x64/Debug/ksharp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ksharp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
rt/comp/: tokenizer.h
runtime/: declarations.h  lib.h  lib.hpp
runtime/compiler/: comp.cpp  comp.h  comp.hpp  main.cpp
runtime/compiler/com/: README
runtime/compiler/def/: README.md
runtime/compiler/def/components/lexer/: lexer.h
runtime/compiler/parts/lexer/: lexer.cpp  lexer.h  lexer.hpp
runtime/tools/types/: lookup_hash.h
utils/: logger.h
website/: Program.cs
website/Components/: App.razor
website/Components/Layout/: NavMenu.razor
website/Components/Pages/: Counter.razor  Weather.razor
website/Properties/: launchSettings.json
